--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
     <header> 
-        <h1 class="centertext textcolor large">John Mayer</h1>
+        <h1 class="textcolor large">John Mayer</h1>
         <nav>
             <a href="#about">About</a>
             <a href="#discography">Discography</a>
